--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,15 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <load ="partials/scroll.html" />
-
     <main>
-      <load ="partials/about.html" />
-      <load ="partials/search.html" />
-      <load ="partials/products.html" />
+      <load ="partials/hero.html" />
+      <section id="about-us" class="section-home-page js-home-page">
+        <load ="partials/filters.html" />
+        <load ="partials/products-list.html" />
+        <load ="partials/popular-products.html" />
+        <load ="partials/discount-products.html" />
+      </section>
+      <load ="partials/modal-product-card.html" />
     </main>
     <load ="partials/footer.html" />
 
