--- a/src/cart.html
+++ b/src/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FoodBoutique</title>
+    <title>Cart</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,14 +20,7 @@
   <body>
     <load ="partials/header.html" />
     <main>
-      <load ="partials/hero.html" />
-      <section id="about-us" class="section-home-page container js-home-page">
-        <load ="partials/filters.html" />
-        <load ="partials/products-list.html" />
-        <load ="partials/popular-products.html" />
-        <load ="partials/discount-products.html" />
-      </section>
-      <load ="partials/modal-product-card.html" />
+      <load ="partials/cart.html" />
     </main>
     <load ="partials/footer.html" />
 
