--- a/src/cart.html
+++ b/src/cart.html
@@ -5,8 +5,6 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -24,6 +22,6 @@
     </main>
     <load ="partials/footer.html" />
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/cart.js"></script>
   </body>
 </html>
