--- a/src/cart.html
+++ b/src/cart.html
@@ -18,35 +18,10 @@
   <body>
     <load ="partials/header.html" />
     <main>
-      <load ="partials/cart.html" />
+      <load ="partials/basket.html" />
     </main>
     <load ="partials/footer.html" />
-<div class="container">
-  <div class="icon-and-cart">
-    <div class="cart-icon">
-      <svg class="cart-icon-img" width="100" height="16">
-        <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
-      </svg>
-    </div>
 
-    <div class="cart-info">
-      <h1 id="cartTitle">Cart (0)</h1>
-    </div>
-  </div>
-
-
-
-  <div class="cart-content" id="cartContent">
-    <img src="./images/basket-2x.png" alt="Basket Image" />
-    <p class="empty-message" id="emptyMessage">
-      Your basket is<span style="color: #6d8434"> empty ...</span>
-    </p>
-
-    <p>
-      Go to the main page to select your favorite <br />products and add them to the cart<br />
-    </p>
-  </div>
-</div>
     <script type="module" src="./js/cart.js"></script>
   </body>
 </html>
