add container to section hero

--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,19 @@
     <load ="partials/header.html" />
     <main>
       <load ="partials/hero.html" />
-      <section id="home-page" class="section-home-page container js-home-page">
-        <load ="partials/filters.html" />
+      <section id="home-page" class="section-home-page js-home-page">
+        <div class="container">
+          <load ="partials/filters.html" />
 
-        <div class="products-container">
-          <div class="products-wraper">
-            <load ="partials/products-list.html" />
-            <load ="partials/pagination.html" />
-          </div>
-          <div class="popular-products-wraper">
-            <load ="partials/popular-products.html" />
-            <load ="partials/discount-products.html" />
+          <div class="products-container">
+            <div class="products-wraper">
+              <load ="partials/products-list.html" />
+              <load ="partials/pagination.html" />
+            </div>
+            <div class="popular-products-wraper">
+              <load ="partials/popular-products.html" />
+              <load ="partials/discount-products.html" />
+            </div>
           </div>
         </div>
       </section>
