--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -20,10 +19,10 @@
     <main>
       <load ="partials/hero.html" />
       <section id="home-page" class="section-home-page js-home-page">
-        <div class="container">
+        <div class="hero-products-filter-container container">
           <load ="partials/filters.html" />
 
-          <div class="products-container">
+          <div class="hero-products-container container">
             <div class="products-wraper">
               <load ="partials/products-list.html" />
               <load ="partials/pagination.html" />
