--- a/src/cart.html
+++ b/src/cart.html
@@ -23,5 +23,6 @@
     <load ="partials/footer.html" />
 
     <script type="module" src="./js/cart.js"></script>
+    <script type="module" src="./js/cartCount.js"></script>
   </body>
 </html>
