add scroll discount

--- a/src/cart.html
+++ b/src/cart.html
@@ -21,7 +21,7 @@
       <load ="partials/basket.html" />
     </main>
     <load ="partials/footer.html" />
-
+    <load ="partials/scroll.html" />
     <script type="module" src="./js/cart.js"></script>
     <script type="module" src="./js/cartCount.js"></script>
   </body>
