--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,8 @@
       <load ="partials/modal-product-card.html" />
     </main>
     <load ="partials/footer.html" />
-
+    <load ="partials/scroll.html" />
+    <load ="partials/loader.html" />
     <script type="module" src="./main.js"></script>
   </body>
 </html>
