--- a/src/cart.html
+++ b/src/cart.html
@@ -22,6 +22,7 @@
     </main>
     <load ="partials/footer.html" />
     <load ="partials/scroll.html" />
+    <load ="partials/loader.html" />
     <script type="module" src="./js/cart.js"></script>
     <script type="module" src="./js/cartCount.js"></script>
   </body>
