--- a/src/cart.html
+++ b/src/cart.html
@@ -25,5 +25,6 @@
     <load ="partials/loader.html" />
     <script type="module" src="./js/cart.js"></script>
     <script type="module" src="./js/cartCount.js"></script>
+    <script type="module" src="./js/subscription.js"></script>
   </body>
 </html>
