--- a/src/cart.html
+++ b/src/cart.html
@@ -23,7 +23,7 @@
     <load ="partials/footer.html" />
     <load ="partials/scroll.html" />
     <load ="partials/loader.html" />
-    <script type="module" src="./js/cart.js"></script>
+    <script type="module" src="./cart.js"></script>
     <script type="module" src="./js/subscription.js"></script>
   </body>
 </html>
